<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/screen1"
        android:layout_width="138dp"
        android:layout_height="55dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/screen2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <Button
        android:id="@+id/screen2"
        android:layout_width="136dp"
        android:layout_height="62dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/subtract"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/screen3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <Button
        android:id="@+id/screen3"
        android:layout_width="138dp"
        android:layout_height="64dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/multiply"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/screen6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/screen6"
        android:layout_width="141dp"
        android:layout_height="59dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/divide"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#7CFFFFFF"
        android:fontFamily="@font/coustard"
        android:paddingStart="40dp"
        android:paddingRight="40dp"
        android:text="@string/menu"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/screen1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="RtlSymmetry"
        android:paddingLeft="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>